--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_core: ^2.27.0
   cloud_firestore: ^4.15.0
   firebase_auth: ^4.17.0
+  firebase_auth_web: ^5.9.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
